fix(1078): remove whitespace between header and video in 1 col layouts

--- a/app/styles/scene.css
+++ b/app/styles/scene.css
@@ -571,7 +571,7 @@ TODO there's probably a less counterintuitive way of handling sidebar widths tha
 @media screen and (min-width: 1000px) and (min-height: 700px) {
 	.scene.onecol .col,
 	.scene.onecol .videoMagnet {
-		margin: 0 25%;
+		margin: -3px 25%;
 	}
 	.scene.onecol .videoPositioner {
 		width: 100%;
